--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,7 +264,7 @@ section{
   }
   /*-------------------------------------------header-------------------------------------------*/ 
   .header-wrapper{
-    margin: 60px 60px 170px 60px;
+    margin: 60px 60px 190px 60px;
   }
   .header-wrapper img,.footer-contact-logo img{
     width: 225px;
@@ -301,6 +301,7 @@ section{
   }
   .community-text {
     max-width: 300px;
+    margin: 90px 0px;
   }
   .homepage-community-text-top p{
     align-self: start;
@@ -364,7 +365,7 @@ section{
     font-size: 40px;
   }
   .homepage-end{
-    margin-bottom: 150px;
+    margin-bottom: 170px;
   }
   /*---------------------------------footer-------------------------------------------*/
   .footer-bg-top{
